--- a/nvim/.config/nvim/coc-settings.json
+++ b/nvim/.config/nvim/coc-settings.json
@@ -12,11 +12,6 @@
     ],
     "clangd.path": "/usr/local/opt/llvm/bin/clangd",
     "clangd.fallbackFlags": [
-        "-std=c++20",
-        "-isystem/usr/local/opt/llvm/bin/../include/c++/v1",
-        "-isystem/usr/local/Cellar/llvm/13.0.0_1/lib/clang/13.0.0/include",
-        "-isystem/Library/Developer/CommandLineTools/SDKs/MacOSX12.sdk/usr/include",
-        "-isystem/Library/Developer/CommandLineTools/SDKs/MacOSX12.sdk/System/Library/Frameworks",
-        "-I/usr/local/include"
+        "-std=c++2a"
     ]
 }
