--- a/nvim/.config/nvim/coc-settings.json
+++ b/nvim/.config/nvim/coc-settings.json
@@ -1,8 +1,8 @@
 {
-    "python.pythonPath": "/usr/local/bin/python3",
+    "python.pythonPath": "/usr/bin/python3",
     "python.formatting.provider": "black",
     "python.formatting.blackPath": "/usr/local/bin/black",
-    "python.linting.pylintEnabled": true,
+    "python.linting.pylintEnabled": false,
     "coc.preferences.formatOnSaveFiletypes": [
         "python",
         "json",
@@ -10,7 +10,6 @@
         "c",
         "markdown"
     ],
-    "clangd.path": "/usr/local/opt/llvm/bin/clangd",
     "clangd.fallbackFlags": [
         "-std=c++2a"
     ]
