--- a/nvim/.config/nvim/coc-settings.json
+++ b/nvim/.config/nvim/coc-settings.json
@@ -5,7 +5,7 @@
     "python.linting.pylintPath": "~/.local/bin/pylint",
     "python.linting.enabled": true,
     "python.linting.pylintEnabled": true,
-    "python.linting.lintOnSave": true,
+    "python.linting.lintOnSave": false,
     "pyright.disableDiagnostics": true, // Needs to be disabled for pyLint
     "coc.preferences.formatOnSaveFiletypes": [
         //        "python",
