--- a/nvim/.config/nvim/coc-settings.json
+++ b/nvim/.config/nvim/coc-settings.json
@@ -16,5 +16,9 @@
     ],
     "clangd.fallbackFlags": [
         "-std=c++2a"
+    ],
+    "clangd.arguments": [
+        "-j=16",
+        "--background-index"
     ]
 }
