updated fonts to use JetBrains Mono Nerd

--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -2,10 +2,10 @@
 #include nord.conf
 include themes/gruvbox.conf
 
-font_family JetBrains Mono
-bold_font JetBrains Mono Bold
-italic_font JetBrains Mono Italic
-bold_italic_font JetBrains Mono Bold Italic
+font_family JetBrains Mono Regular Nerd Font Complete Mono
+bold_font JetBrains Mono Bold Nerd Font Complete Mono
+italic_font JetBrains Mono Italic Nerd Font Copmlete Mono
+bold_italic_font JetBrains Mono Bold Italic Nerd Font Complete Mono
 
 font_size 18
 
