--- a/nvim/.config/nvim/coc-settings.json
+++ b/nvim/.config/nvim/coc-settings.json
@@ -14,11 +14,10 @@
         //        "c",
         //       "markdown"
     ],
-    "clangd.fallbackFlags": [
-        "-std=c++2a"
-    ],
+    "clangd.fallbackFlags": [],
     "clangd.arguments": [
         "-j=16",
-        "--background-index"
+        "--background-index",
+        "--clang-tidy"
     ]
 }
