tab management for kitty

--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -24,8 +24,13 @@ macos_window_resizable yes
 # Key binds
 kitty_mod cmd+shift
 
+# Tab management
 map kitty_mod+c		launch --cwd=current
-map kitty_mod+r		load_config_file
+map kitty_mod+h     previous_tab
+map kitty_mod+l     next_tab
+
+
+# Key codes
 map cmd+l			send_text normal,application \x0c
 #map cmd+r			send_text normal,application \x12
 #map cmd+c			send_text normal,application \x03
@@ -33,4 +38,6 @@ map cmd+d			send_text normal,application \x04
 map cmd+x			send_text normal,application \x18
 map cmd+z			send_text normal,application \x1a
 
-
+# Misc
+map ctrl+shift+h    show_scrollback
+map kitty_mod+r		load_config_file
