added airline back to stop flickering

--- a/nvim/.config/nvim/coc-settings.json
+++ b/nvim/.config/nvim/coc-settings.json
@@ -7,6 +7,7 @@
     "python.linting.pylintEnabled": true,
     "python.linting.lintOnSave": false,
     "pyright.disableDiagnostics": true, // Needs to be disabled for pyLint
+    "python.analysis.diagnosticMode": "workspace",
     "coc.preferences.formatOnSaveFiletypes": [
         //        "python",
         "json"
