mac update and saving

--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -2,12 +2,17 @@
 #include nord.conf
 include themes/gruvbox.conf
 
-font_family JetBrains Mono Regular Nerd Font Complete Mono
-bold_font JetBrains Mono Bold Nerd Font Complete Mono
-italic_font JetBrains Mono Italic Nerd Font Copmlete Mono
-bold_italic_font JetBrains Mono Bold Italic Nerd Font Complete Mono
+# font_family JetBrains Mono Regular Nerd Font Complete Mono
+# bold_font JetBrains Mono Bold Nerd Font Complete Mono
+# italic_font JetBrains Mono Italic Nerd Font Copmlete Mono
+# bold_italic_font JetBrains Mono Bold Italic Nerd Font Complete Mono
+font_family         Fira Code
+bold_font           auto
+italic_font         auto
+bold_italic_font    auto
 
 font_size 18
+disable_ligatures never
 
 cursor_blink_interval 0 
 enable_audio_bell no 
@@ -41,3 +46,5 @@ map cmd+z			send_text normal,application \x1a
 # Misc
 map ctrl+shift+h    show_scrollback
 map kitty_mod+r		load_config_file
+
+enabled_layouts horizontal
