--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -1,6 +1,6 @@
 #include dracula.conf
 #include nord.conf
-include themes/gruvbox.conf
+# include themes/gruvbox.conf
 
 # font_family JetBrains Mono Regular Nerd Font Complete Mono
 # bold_font JetBrains Mono Bold Nerd Font Complete Mono
@@ -51,6 +51,6 @@ enabled_layouts horizontal
 
 
 # BEGIN_KITTY_THEME
-# Gruvbox Dark Soft
+# Gruvbox Material Dark Medium
 include current-theme.conf
 # END_KITTY_THEME
