--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -34,6 +34,10 @@ map kitty_mod+c		launch --cwd=current
 map kitty_mod+h     previous_tab
 map kitty_mod+l     next_tab
 
+# Split management within a tab
+map cmd+ctrl+l  next_window
+map cmd+ctrl+h  previous_window 
+
 
 # Key codes
 map cmd+l			send_text normal,application \x0c
@@ -47,7 +51,8 @@ map cmd+z			send_text normal,application \x1a
 map ctrl+shift+h    show_scrollback
 map kitty_mod+r		load_config_file
 
-enabled_layouts horizontal
+map ctrl+shift+l next_layout
+# enabled_layouts horizontal
 
 
 # BEGIN_KITTY_THEME
